# imihigo-dhis2-tools

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: analysis.md  cli.md  index.md
docs/datasets/: bugesera.md  gatsibo.md  index.md  kayonza.md  kirehe.md  ngoma.md  nyagatare.md  rwamagana.md
scripts/: extract.py
src/imihigo_dhis2_tools/: cli.py  console.py  state.py
src/imihigo_dhis2_tools/commands/: clean.py  install.py  seed.py
src/imihigo_dhis2_tools/data/: BUGESERA.json  GATSIBO.json  KAYONZA.json  KIREHE.json  NGOMA.json  NYAGATARE.json  RWAMAGANA.json  datasets_elements.json
src/imihigo_dhis2_tools/dhis2/: client.py  metadata.py
